# kamailio-notebook

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml  untitled.chat
notebooks/curriculum/en/01-beginner/: 01-hello-kamailio.ipynb  02-variables-and-types.ipynb  03-routing-basics.ipynb  04-strings-and-operations.ipynb
notebooks/curriculum/en/02-intermediate/: 01-transformations.ipynb  02-dispatcher-and-routing.ipynb  03-auth.ipynb  04-registration-and-location.ipynb
notebooks/curriculum/en/03-advanced/: 01-dialog-and-failover.ipynb  02-header-manipulation.ipynb
notebooks/curriculum/ko/01-beginner/: 01-hello-kamailio.ipynb  02-variables-and-types.ipynb  03-routing-basics.ipynb  04-strings-and-operations.ipynb
notebooks/curriculum/ko/02-intermediate/: 01-transformations.ipynb  02-dispatcher-and-routing.ipynb  03-auth.ipynb  04-registration-and-location.ipynb
notebooks/curriculum/ko/03-advanced/: 01-dialog-and-failover.ipynb  02-header-manipulation.ipynb
scripts/: generate_demo_video.py  record_demo.py
src/kamailio_notebook/: __init__.py  cfg_executor.py  cfg_tracer.py  install.py  kamailio_control.py  kamcmd.py  kernel.py  sip_message.py  transforms.py  variables.py
src/kamailio_notebook/kernel_spec/: kernel.json
src/kamailio_notebook/renderer/: mermaid.py
tests/: test_executor.py  test_var_diff.py
