[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kamailio-notebook"
version = "0.1.0"
description = "Jupyter Notebook kernel for Kamailio SIP Server cfg scripting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "김종인" },
]
keywords = ["kamailio", "sip", "voip", "jupyter", "notebook", "kernel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
]
dependencies = [
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
kamailio-notebook-install = "kamailio_notebook.install:install_kernel"

[tool.hatch.build.targets.wheel]
packages = ["src/kamailio_notebook"]

[tool.ruff]
line-length = 100
target-version = "py310"
